overflow correction

--- a/style.css
+++ b/style.css
@@ -754,7 +754,7 @@ footer {
         top: 0;
         left: 0;
         z-index: 1;
-        overflow-x: hidden;
+        overflow: hidden;
     }
     
     .navbar {
